--- a/src/app/heroes/pages/add-hero-page/add-hero-page.component.html
+++ b/src/app/heroes/pages/add-hero-page/add-hero-page.component.html
@@ -1,6 +1,7 @@
 <h1>
-  Editar / Agregar héroe
-  <small>Superman</small>
+  {{currentHero.id ? 'Editar' : 'Agregar'}} héroe
+  <br>
+  <small *ngIf="currentHero.id">{{currentHero.superhero}}</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -9,42 +10,49 @@
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super héroe</mat-label>
-            <input type="text" matInput required/>
+            <input type="text" matInput required formControlName="superhero"/>
           </mat-form-field>
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Alter ego</mat-label>
-            <input type="text" matInput required/>
+            <input type="text" matInput required formControlName="alter_ego"/>
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Primera aparición</mat-label>
-            <input type="text" matInput required/>
+            <input type="text" matInput required formControlName="first_appearance"/>
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Personajes</mat-label>
-            <input type="text" matInput required/>
+            <input type="text" matInput required formControlName="characters"/>
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-            <mat-select required="">
+            <mat-select required="" formControlName="publisher">
               <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">{{publisher.desc}}</mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+
+          <mat-form-field class="col-12">
+            <mat-label>Alternative Image</mat-label>
+            <input type="text" matInput formControlName="alt_img"/>
+          </mat-form-field>
+        </form>
 
         <div class="flex justify-content-between">
-          <button color="warn" mat-flat-button>
+          <button *ngIf="currentHero.id" (click)="onDeleteHero()" color="warn" mat-flat-button>
             <mat-icon>delete</mat-icon>
             Borrar
           </button>
 
-          <button color="primary" mat-flat-button>
+          <span></span>
+
+          <button color="primary" mat-flat-button (click)="onSubmit()">
             <mat-icon>save</mat-icon>
             Guardar
           </button>
@@ -55,7 +63,7 @@
 
   <div class="col-12 sm:col-6">
     <mat-card>
-      <img [src]="" alt="imagen del héroe" matCardImage>
+      <img [src]="currentHero | heroImage" alt="imagen del héroe" matCardImage>
     </mat-card>
   </div>
 </div>
