--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -8,7 +8,7 @@
     <mat-label>Contraseña</mat-label>
     <input type="text" matInput placeholder="Contraseña">
   </mat-form-field>
-  <button mat-button mat-flat-button color="primary" routerLink="/heroes/list">
+  <button (click)="onLogin()" mat-button mat-flat-button color="primary" routerLink="/heroes/list">
     <mat-icon>login</mat-icon>
     Ingresar
   </button>
