--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -7,6 +7,7 @@
         <mat-icon>menu</mat-icon>
       </button>
     </mat-toolbar>
+
     <mat-nav-list>
       <mat-list-item
         *ngFor="let item of sidebarItems"
@@ -17,16 +18,21 @@
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
+
   <mat-toolbar color="primary">
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
+
     <span class="spacer"></span>
-    <button mat-button>
+    <span>{{user?.user}}</span>
+
+    <button (click)="onLogout()" mat-button>
       <mat-icon>logout</mat-icon>
       Logout
     </button>
   </mat-toolbar>
+
   <div class="container p-2">
     <router-outlet></router-outlet>
   </div>
